Feat: [#35] File 처리 관련 로직 리팩토링
- FilePathResolver을 논리적경로 매퍼(LogicalPathMapper)와 외부에서 리소스 접근하는 URL 반환 리졸버(ResouceUrlResolver)으로 분리
- file관련 폴더 구조 수정